--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dev": "next dev"
+    "dev": "next dev",
+    "postinstall": "typechain --target web3-v1 'ethereum/build/*.json'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typechain/web3-v1": "^3.0.0",
+    "@types/node": "^12.20.19",
+    "@types/react": "^17.0.16",
     "fs-extra": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.0.3",
@@ -21,6 +25,10 @@
     "semantic-ui-react": "^2.0.3",
     "solc": "^0.7.0",
     "truffle-hdwallet-provider": "^1.0.17",
+    "typescript": "^4.3.5",
     "web3": "^1.5.0"
+  },
+  "devDependencies": {
+    "typechain": "^5.1.2"
   }
 }
